--- a/app/views/kplus/login/IndexView.twig
+++ b/app/views/kplus/login/IndexView.twig
@@ -53,7 +53,7 @@
                             <!-- Form [Submit-Button] -->
                             <button type="submit" class="btn btn-default">Login</button>
 
-                            <button type="button" class="btn btn-primary pull-right">Registreer</button>
+                            <a href="{{route('registration')}}" class="btn btn-primary pull-right">Registreer</a>
                         </form>     
                     </div>
                 </div>
