--- a/app/views/kplus/login/IndexView.twig
+++ b/app/views/kplus/login/IndexView.twig
@@ -34,21 +34,24 @@
                     <div class="panel-body">
                         {% if not errors is empty %} 
                             {% for error in errors.all %}
-                               {{dump(error)}}
+                               {# {{dump(error)}} #}
+                                <div class="alert alert-danger alert-dismissible" role="alert">
+                                  <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                                  {{error}}
+                                </div>
                             {% endfor %}
                         {% endif %}
-
                         <form method="POST" action="{{ route('authenticate')}}">
                             {{ Form.token()|raw }}
                             <!-- Form [Email] -->
                             <div class="form-group input-group">
                                 <span class="input-group-addon"><i class="fa fa-fw fa-at"></i></span>
-                                <input type="text" class="form-control" name="email" placeholder="Email"value="{{Input.old('email')}}">
+                                <input type="text" class="form-control" name="e-mail" placeholder="Email"value="{{Input.old('email')}}">
                             </div>
                             <!-- Form [Password] -->
                             <div class="form-group input-group">
                                 <span class="input-group-addon"><i class="fa fa-fw fa-key"></i></span>
-                                <input type="password" class="form-control" name="password" placeholder="Wachtwoord">
+                                <input type="password" class="form-control" name="wachtwoord" placeholder="Wachtwoord">
                             </div>
                             <!-- Form [Submit-Button] -->
                             <button type="submit" class="btn btn-default">Login</button>
