authentication for admin in place. Added product view. needs some work added fix for the cart/product/update route

--- a/app/views/kplus/cart/IndexView.twig
+++ b/app/views/kplus/cart/IndexView.twig
@@ -71,4 +71,5 @@
 {% endblock content %}
 
 {% block javascript %}
+<script type="text/javascript" scr="{{asset('js/cart.js')}}"></script>
 {% endblock javascript %}
