--- a/app/views/kplus/cart/IndexView.twig
+++ b/app/views/kplus/cart/IndexView.twig
@@ -25,45 +25,48 @@
     </div>
     <!-- /.row -->
 	
-	<div class="row">
-		<div class="col-lg-12">
-			{% if cartItems|length == 0 %}
-				<h2> Nog geen producten geselecteerd </h2>
-				<a class="btn btn-default" href="{{route('products')}}">Start met selecteren van producten</a>
-			{% else %}
-				<div class="table-responsive">
-                    <table class="table table-hover">
-                        <thead>
-                            <tr>
-                                <th>EAN</th>
-                                <th>Omschrijving</th>
-                                <th>Prijs (<i class="fa fa-euro"></i>)</th>
-                                <th>Hoeveelheid</th>
-                                <th></th>
-                            </tr>
-                        </thead>
-                        <tbody>
-	                      	{% for cartItem in cartItems %}
-	                      		<tr>
-	                      			<td>{{ cartItem.product.ean }}</td>
-	                      			<td>{{ cartItem.product.name }}</td>
-	                      			<td><i class="fa fa-fw fa-euro"></i>{{ cartItem.product.price / 100 }}</td>
-	                      			<td>{{ cartItem.qty }}</td>
-	                      			<td>
-	                      				<button class="btn btn-sm btn-default"><i class="fa fa-fw fa-plus"></i></button>
-	                      				<button class="btn btn-sm btn-danger"><i class="fa fa-fw fa-minus"></i></button>
-	                      			</td>
-	                      		</tr>
-	                      	{% endfor %}
-	                      	<tr class="warning">
-                                <td colspan="2">Totalen</td>
-                                <td><i class="fa fa-fw fa-euro"></i>{{totalPrice / 100}}</td>
-                                <td colspan="2">{{totalQty}}</td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-			{% endif %}
+	<div class="row" id="cart-view">
+		<div id="cart-row">
+			<div class="col-lg-12">
+				{% if cartItems|length == 0 %}
+					<h2> Nog geen producten geselecteerd </h2>
+					<a class="btn btn-default" href="{{route('products')}}">Start met selecteren van producten</a>
+				{% else %}
+					<div class="table-responsive">
+	                    <table class="table table-hover cart-table">
+	                        <thead>
+	                            <tr>
+	                                <th>EAN</th>
+	                                <th>Omschrijving</th>
+	                                <th>Prijs (<i class="fa fa-euro"></i>)</th>
+	                                <th>Hoeveelheid</th>
+	                                <th></th>
+	                            </tr>
+	                        </thead>
+	                        <tbody>
+		                      	{% for cartItem in cartItems %}
+		                      		<tr data-product-id="{{cartItem.product.id}}">
+		                      			<td>{{ cartItem.product.ean }}</td>
+		                      			<td>{{ cartItem.product.name }}</td>
+		                      			<td><i class="fa fa-fw fa-euro"></i><span class="item-price">{{ cartItem.product.price / 100 }}</span></td>
+		                      			<td><span class="item-qty">{{ cartItem.qty }}</span></td>
+		                      			<td>
+		                      				<button class="btn btn-sm btn-add-product btn-success"><i class="fa fa-fw fa-plus"></i></button>
+		                      				<button class="btn btn-sm btn-substract-product btn-warning"><i class="fa fa-fw fa-minus"></i></button>
+		                      				<button class="btn btn-sm btn-delete-product btn-danger"><i class="fa fa-fw fa-trash-o"></i></button>
+		                      			</td>
+		                      		</tr>
+		                      	{% endfor %}
+		                      	<tr class="warning">
+	                                <td colspan="2">Totalen</td>
+	                                <td><i class="fa fa-fw fa-euro"></i><span class="total-price">{{totalPrice / 100}}</span></td>
+	                                <td colspan="2"><span class="total-qty">{{totalQty}}</span></td>
+	                            </tr>
+	                        </tbody>
+	                    </table>
+	                </div>
+				{% endif %}
+			</div>
 		</div>
 	</div>
 </div>
@@ -71,5 +74,5 @@
 {% endblock content %}
 
 {% block javascript %}
-<script type="text/javascript" scr="{{asset('js/cart.js')}}"></script>
+<script src="{{asset('packages/js/cart.js')}}" type="text/javascript"></script>
 {% endblock javascript %}
