--- a/app/views/kplus/product/IndexView.twig
+++ b/app/views/kplus/product/IndexView.twig
@@ -1,6 +1,7 @@
 {% extends 'kplus/BaseView.twig' %}
 
 {% block styles %}
+<<link rel="stylesheet" href="{{ asset('packages/theme/products.css') }}">
 {% endblock styles %}
 
 {% block content %}
@@ -25,51 +26,70 @@
     <!-- /.row -->
 	
 	<div class="row">
-		<div class="col-lg-offset-6 col-lg-6">
+		<div class="col-lg-offset-5 col-lg-1">
+			<i class="loading-icon fa fa-fw fa-spinner fa-pulse fa-3x" style="display:none;"></i>
+		</div>
+
+		<div class="col-lg-6">
 			<div class="form-group input-group">
 	            <input class="form-control search-box" type="text">
 	            <span class="input-group-btn"><button class="btn btn-default search-button" type="button"><i class="fa fa-search"></i></button></span>
 	        </div>
 		</div>
+		
 		<div class="col-lg-12">
 			{% if products|length == 0 %}
 				<h2> Geen inventaris </h2>
 			{% else %}
-				<div class="table-responsive">
-                    <table class="table table-hover">
-                        <thead>
-                            <tr>
-                                <th>EAN</th>
-                                <th>Omschrijving</th>
-                                <th>Prijs (<i class="fa fa-euro"></i>)</th>
-                                <th class="text-center">In voorraad</th>
-                                <th></th>
-                            </tr>
-                        </thead>
-                        <tbody>
-	                      	{% for product in products %}
-	                      		<tr>
-	                      			<td>{{ product.ean }}</td>
-	                      			<td>{{ product.name }}</td>
-	                      			<td><i class="fa fa-fw fa-euro"></i>{{ product.price / 100 }}</td>
-	                      			<td class='text-center'>
-	                      				{% if product.stock > 0 %}
-	                      					<i class="fa fa-fw fa-check-circle" style="color: green !important;"></i>
-	                      				{% else %}
-	                      					<i class="fa fa-fw fa-times" style="color: red !important;"></i>
-										{% endif %}
-	                      			</td>
-	                      			<td>
-	                      				<button class="btn btn-sm btn-default"><i class="fa fa-fw fa-plus"></i></button>
-	                      			</td>
-	                      		</tr>
-	                      	{% endfor %}
-                        </tbody>
-                    </table>
-                </div>
-                <div class="text-center">
-                	{{ products.links|raw }}
-                </div>
+				<div id="table-space">
+					<div id="table-with-pagination">
+						<div class="table-responsive">
+		                    <table class="table product-table table-hover">
+		                        <thead>
+		                            <tr>
+		                                <th>EAN</th>
+		                                <th>Omschrijving</th>
+		                                <th>Prijs (<i class="fa fa-euro"></i>)</th>
+		                                <th class="text-center">In voorraad</th>
+		                                <th></th>
+		                            </tr>
+		                        </thead>
+		                        <tbody>
+			                      	{% for product in products %}
+			                      		<tr data-product-id="{{product.id}}">
+			                      			<td>{{ product.ean }}</td>
+			                      			<td><span class="product-name">{{ product.name }}</span></td>
+			                      			<td><i class="fa fa-fw fa-euro"></i>{{ product.price / 100 }}</td>
+			                      			<td class='text-center'>
+			                      				{% if product.stock > 0 %}
+			                      					<i class="fa fa-fw fa-check-circle" style="color: green !important;"></i>
+			                      				{% else %}
+			                      					<i class="fa fa-fw fa-times" style="color: red !important;"></i>
+												{% endif %}
+			                      			</td>
+			                      			<td>
+				                      			{% if product.stock > 0 %}
+				                      				{% if username == 'Gast' %}
+				                      					<a href="{{ route('login') }}" class="btn btn-sm btn-success"><i class="fa fa-fw fa-plus"></i></a>
+		                      						{% else %}
+				                      					<button class="btn btn-sm btn-success btn-add-product"><i class="fa fa-fw fa-plus"></i></button>
+				                      				{% endif %}
+				                      			{% else %}
+				                      				<fieldset disabled="">
+				                      					<button class="btn btn-sm btn-success"><i class="fa fa-fw fa-plus"></i></button>
+				                      				</fieldset>
+				                      			{% endif %}
+			                      			</td>
+			                      		</tr>
+			                      	{% endfor %}
+		                        </tbody>
+		                    </table>
+		                </div>
+		                <div class="text-center">
+		                	{{ products.links|raw }}
+		                </div>
+	            	</div>
+           		</div>
 			{% endif %}
 		</div>
 	</div>
@@ -78,4 +98,5 @@
 
 {% block javascript %}
 <script type="text/javascript" src="{{asset('packages/js/products.js')}}"></script>
+<script type="text/javascript" src="{{ asset('packages/theme/jquery.bootstrap-growl.min.js') }}"></script>
 {% endblock javascript %}
