just left the site variable. without the define

--- a/app/views/kplus/includes/MenuView.twig
+++ b/app/views/kplus/includes/MenuView.twig
@@ -8,7 +8,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="{{route('home')}}">{{constant('SITE')}}</a>
+        <a class="navbar-brand" href="{{route('home')}}">{{SITE}}</a>
     </div>
     
     <!-- Top Menu Items -->
