--- a/app/views/kplus/BaseView.twig
+++ b/app/views/kplus/BaseView.twig
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<title>{{ constant('SITE') }} :: {{ title }}</title>
+		<title>{{ SITE }} :: {{ title }}</title>
 		<link rel="stylesheet" href="{{asset('packages/bootstrap/css/bootstrap.min.css')}}">
 		<link rel="stylesheet" href="{{asset('packages/fontawesome/css/font-awesome.min.css')}}">
 		<link rel="stylesheet" href="{{asset('packages/theme/sb-admin.css')}}">	
