--- a/app/views/kplus/includes/MenuView.twig
+++ b/app/views/kplus/includes/MenuView.twig
@@ -153,10 +153,11 @@
                     <a href="{{ route('stockmanagement') }}"><i class="fa fa-fw fa-list-alt"></i> Voorraadbeheer</i></a>
                 </li>
             {% endif %}
-           {# 
+
             <li>
-                <a href="bootstrap-elements.html"><i class="fa fa-fw fa-desktop"></i> Bootstrap Elements</a>
+                <a href="{{route('orders')}}"><i class="fa fa-fw fa-money"></i> Facturen</a>
             </li>
+            {#
             <li>
                 <a href="bootstrap-grid.html"><i class="fa fa-fw fa-wrench"></i> Bootstrap Grid</a>
             </li>
