--- a/app/views/kplus/stock/IndexView.twig
+++ b/app/views/kplus/stock/IndexView.twig
@@ -4,7 +4,71 @@
 {% endblock styles %}
 
 {% block content %}
-<h1> MOTHAFUCKAA </h1>
+<div class="container-fluid">
+    <!-- Page Heading -->
+    <div class="row">
+        <div class="col-lg-12">
+            <h1 class="page-header">
+       			{{pageTitle}}
+                <small>{{subTitle}}</small>
+            </h1>
+            <ol class="breadcrumb">
+                <li>
+                    <i class="fa fa-dashboard"></i>  <a href="{{route('home')}}"> Overzicht</a>
+                </li>
+                <li class="active">
+                    <i class="fa fa-check-square"></i> {{pageTitle}}
+                </li>
+            </ol>
+        </div>
+    </div>
+    <!-- /.row -->
+	
+	<div class="row" id="cart-view">
+		<div id="cart-row">
+			<div class="col-lg-12">
+				{% if cartItems|length == 0 %}
+					<h2> Nog geen producten geselecteerd </h2>
+					<a class="btn btn-default" href="{{route('products')}}">Start met selecteren van producten</a>
+				{% else %}
+					<div class="table-responsive">
+	                    <table class="table table-hover cart-table">
+	                        <thead>
+	                            <tr>
+	                                <th>EAN</th>
+	                                <th>Omschrijving</th>
+	                                <th>Prijs (<i class="fa fa-euro"></i>)</th>
+	                                <th>Hoeveelheid</th>
+	                                <th></th>
+	                            </tr>
+	                        </thead>
+	                        <tbody>
+		                      	{% for cartItem in cartItems %}
+		                      		<tr data-product-id="{{cartItem.product.id}}">
+		                      			<td>{{ cartItem.product.ean }}</td>
+		                      			<td>{{ cartItem.product.name }}</td>
+		                      			<td><i class="fa fa-fw fa-euro"></i><span class="item-price">{{ cartItem.product.price / 100 }}</span></td>
+		                      			<td><span class="item-qty">{{ cartItem.qty }}</span></td>
+		                      			<td>
+		                      				<button class="btn btn-sm btn-add-product btn-success"><i class="fa fa-fw fa-plus"></i></button>
+		                      				<button class="btn btn-sm btn-substract-product btn-warning"><i class="fa fa-fw fa-minus"></i></button>
+		                      				<button class="btn btn-sm btn-delete-product btn-danger"><i class="fa fa-fw fa-trash-o"></i></button>
+		                      			</td>
+		                      		</tr>
+		                      	{% endfor %}
+		                      	<tr class="warning">
+	                                <td colspan="2">Totalen</td>
+	                                <td><i class="fa fa-fw fa-euro"></i><span class="total-price">{{totalPrice / 100}}</span></td>
+	                                <td colspan="2"><span class="total-qty">{{totalQty}}</span></td>
+	                            </tr>
+	                        </tbody>
+	                    </table>
+	                </div>
+				{% endif %}
+			</div>
+		</div>
+	</div>
+</div>
 {% endblock content %}
 
 {% block javascript %}
