--- a/app/views/kplus/stock/IndexView.twig
+++ b/app/views/kplus/stock/IndexView.twig
@@ -1,4 +1,4 @@
-{% extends 'kplus/BaseView.twig' %}1
+{% extends 'kplus/BaseView.twig' %}
 
 {% block styles %}
 {% endblock styles %}
@@ -11,65 +11,85 @@
             <h1 class="page-header">
        			{{pageTitle}}
                 <small>{{subTitle}}</small>
+                <i class="fa fa-fw fa-spinner fa-pulse page-loader" style="display: none;"></i>
             </h1>
             <ol class="breadcrumb">
                 <li>
-                    <i class="fa fa-dashboard"></i>  <a href="{{route('home')}}"> Overzicht</a>
+                    <i class="fa fa-home"></i>  <a href="{{route('home')}}"> Overzicht</a>
                 </li>
                 <li class="active">
                     <i class="fa fa-check-square"></i> {{pageTitle}}
                 </li>
             </ol>
+			
         </div>
     </div>
     <!-- /.row -->
 	
-	<div class="row" id="cart-view">
-		<div id="cart-row">
-			<div class="col-lg-12">
-				{% if cartItems|length == 0 %}
-					<h2> Nog geen producten geselecteerd </h2>
-					<a class="btn btn-default" href="{{route('products')}}">Start met selecteren van producten</a>
-				{% else %}
-					<div class="table-responsive">
-	                    <table class="table table-hover cart-table">
-	                        <thead>
-	                            <tr>
-	                                <th>EAN</th>
-	                                <th>Omschrijving</th>
-	                                <th>Prijs (<i class="fa fa-euro"></i>)</th>
-	                                <th>Hoeveelheid</th>
-	                                <th></th>
-	                            </tr>
-	                        </thead>
-	                        <tbody>
-		                      	{% for cartItem in cartItems %}
-		                      		<tr data-product-id="{{cartItem.product.id}}">
-		                      			<td>{{ cartItem.product.ean }}</td>
-		                      			<td>{{ cartItem.product.name }}</td>
-		                      			<td><i class="fa fa-fw fa-euro"></i><span class="item-price">{{ cartItem.product.price / 100 }}</span></td>
-		                      			<td><span class="item-qty">{{ cartItem.qty }}</span></td>
-		                      			<td>
-		                      				<button class="btn btn-sm btn-add-product btn-success"><i class="fa fa-fw fa-plus"></i></button>
-		                      				<button class="btn btn-sm btn-substract-product btn-warning"><i class="fa fa-fw fa-minus"></i></button>
-		                      				<button class="btn btn-sm btn-delete-product btn-danger"><i class="fa fa-fw fa-trash-o"></i></button>
-		                      			</td>
-		                      		</tr>
-		                      	{% endfor %}
-		                      	<tr class="warning">
-	                                <td colspan="2">Totalen</td>
-	                                <td><i class="fa fa-fw fa-euro"></i><span class="total-price">{{totalPrice / 100}}</span></td>
-	                                <td colspan="2"><span class="total-qty">{{totalQty}}</span></td>
-	                            </tr>
-	                        </tbody>
-	                    </table>
-	                </div>
-				{% endif %}
+	<div class="row" id="stock-view">
+		
+		<div id="stock-row">
+			<div class="col-md-2">
+				<button class="btn btn-block btn-create-product btn-success"><i class="fa fa-fw fa-plus"></i>Product</button>
 			</div>
+			<div class="col-lg-offset-3 col-lg-1">
+				<i class="loading-icon fa fa-fw fa-spinner fa-pulse fa-3x" style="display:none;"></i>
+			</div>
+
+			<div class="col-lg-6">
+				<div class="form-group input-group">
+		            <input class="form-control search-box" type="text">
+		            <span class="input-group-btn"><button class="btn btn-default search-button" type="button"><i class="fa fa-search"></i></button></span>
+		        </div>
+			</div>
+		
+			<div class="col-lg-12">
+				{% if products|length == 0 %}
+				<h2> Geen inventaris </h2>
+			{% else %}
+				<div id="table-space">
+					<div id="table-with-pagination">
+						<div class="table-responsive">
+		                    <table class="table product-table table-hover">
+		                        <thead>
+		                            <tr>
+		                                <th>EAN</th>
+		                                <th>Omschrijving</th>
+		                                <th>Prijs (<i class="fa fa-euro"></i>)</th>
+		                                <th class="text-center">In voorraad</th>
+		                                <th></th>
+		                            </tr>
+		                        </thead>
+		                        <tbody>
+			                      	{% for product in products %}
+			                      		<tr data-product-id="{{product.id}}">
+			                      			<td>{{ product.ean }}</td>
+			                      			<td><span class="product-name">{{ product.name }}</span></td>
+			                      			<td><i class="fa fa-fw fa-euro"></i>{{ product.price / 100 }}</td>
+			                      			<td class='text-center'>
+			                      				{{product.stock}}
+			                      			</td>
+			                      			<td>
+			                      				<button class="btn btn-edit-product btn-warning btn-sm"><i class="fa fa-fw fa-edit"></i></button>
+			                      				<button class="btn btn-delete-product btn-danger btn-sm"><i class="fa fa-fw fa-trash-o"></i></button>
+			                      			</td>
+			                      		</tr>
+			                      	{% endfor %}
+		                        </tbody>
+		                    </table>
+		                </div>
+		                <div class="text-center">
+		                	{{ products.links|raw }}
+		                </div>
+	            	</div>
+           		</div>
+			{% endif %}
 		</div>
 	</div>
 </div>
 {% endblock content %}
 
 {% block javascript %}
+<script type="text/javascript" src="{{ asset('packages/theme/jquery.bootstrap-growl.min.js') }}"></script>
+<script type="text/javascript" src="{{asset('packages/js/stock.js')}}"></script>
 {% endblock javascript %}
