--- a/app/views/kplus/includes/MenuView.twig
+++ b/app/views/kplus/includes/MenuView.twig
@@ -113,15 +113,11 @@
                         </li>
                     {% else %}
                         <li>
-                            <a href="#"><i class="fa fa-fw fa-user"></i> Profile</a>
+                            <a href="{{route('profile')}}"><i class="fa fa-fw fa-user"></i> Profiel</a>
                         </li>
-{#                         <li>
-                            <a href="#"><i class="fa fa-fw fa-envelope"></i> Inbox</a>
-                        </li> #}
-                        <li>
-                            <a href="#"><i class="fa fa-fw fa-gear"></i> Settings</a>
-                        </li>
+
                         <li class="divider"></li>
+
                         <li>
                              <a href="{{route('logout')}}"><i class="fa fa-fw fa-power-off"></i> Uitloggen</a>
                         </li>
