--- a/app/views/kplus/cart/IndexView.twig
+++ b/app/views/kplus/cart/IndexView.twig
@@ -15,7 +15,7 @@
             </h1>
             <ol class="breadcrumb">
                 <li>
-                    <i class="fa fa-dashboard"></i>  <a href="{{route('home')}}"> Overzicht</a>
+                    <i class="fa fa-home"></i>  <a href="{{route('home')}}"> Overzicht</a>
                 </li>
                 <li class="active">
                     <i class="fa fa-check-square"></i> {{pageTitle}}
