--- a/app/views/kplus/login/IndexView.twig
+++ b/app/views/kplus/login/IndexView.twig
@@ -56,7 +56,7 @@
                             <!-- Form [Submit-Button] -->
                             <button type="submit" class="btn btn-default">Login</button>
 
-                            <a href="{{route('registration')}}" class="btn btn-primary pull-right">Registreer</a>
+                            <a href="{{route('registreer')}}" class="btn btn-primary pull-right">Registreer</a>
                         </form>     
                     </div>
                 </div>
