--- a/app/views/kplus/home/IndexView.twig
+++ b/app/views/kplus/home/IndexView.twig
@@ -9,26 +9,70 @@
         <div class="row">
             <div class="col-lg-12">
                 <h1 class="page-header">
-           	
-                    <small>Subheading</small>
+           	        {{pageTitle}}
+                    <small>{{subTitle}}</small>
                 </h1>
                 <ol class="breadcrumb">
-                    <li>
-                        <i class="fa fa-dashboard"></i>  <a href="{{route('home')}}">Home</a>
-                    </li>
                     <li class="active">
-                        <i class="fa fa-file"></i> Blank Page
+                        <i class="fa fa-home"></i> Overzicht
                     </li>
                 </ol>
             </div>
         </div>
         <!-- /.row -->
-		
-		<div class="row">
-			<div clas="col-lg-12">
-					
+				<div class="row">
+                    <div clas="col-lg-12">
+                        
+
+                        <div class="col-lg-offset-2 col-lg-3 col-md-6">
+                            <div class="panel panel-green">
+                                <div class="panel-heading">
+                                    <div class="row">
+                                        <div class="col-xs-3">
+                                            <i class="fa fa-tasks fa-5x"></i>
+                                        </div>
+                                        <div class="col-xs-9 text-right">
+                                            <div class="huge">12</div>
+                                            <div>Nieuwe boodschappen!</div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <a href="#">
+                                    <div class="panel-footer">
+                                        <span class="pull-left">Bekijke ze hier</span>
+                                        <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
+                                        <div class="clearfix"></div>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+
+                        <div class="col-lg-offset-2 col-lg-3 col-md-6">
+                            <div class="panel panel-yellow">
+                                <div class="panel-heading">
+                                    <div class="row">
+                                        <div class="col-xs-3">
+                                            <i class="fa fa-shopping-cart fa-5x"></i>
+                                        </div>
+                                        <div class="col-xs-9 text-right">
+                                            <div class="huge">124</div>
+                                            <div>Nieuwe bonnen!</div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <a href="#">
+                                    <div class="panel-footer">
+                                        <span class="pull-left">Bekijk hier verder</span>
+                                        <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
+                                        <div class="clearfix"></div>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+        
+                    </div>
+                </div>
 			</div>
-		</div>
     </div>
     <!-- /.container-fluid -->
 {% endblock content %}
