--- a/app/views/kplus/registration/IndexView.twig
+++ b/app/views/kplus/registration/IndexView.twig
@@ -58,7 +58,7 @@
 						
                             <!-- Form [Email] -->
                             <div class="form-group col-md-12">
-                            <label>E-email adres</label>
+                            <label>E-mail adres</label>
                                 <input type="text" class="form-control" name="e-mail" value="{{Input.old('e-mail')}}">
                             </div>
                             
